Spin logic added

--- a/BMPL/BM.UI.Forms.MainForm.resx
+++ b/BMPL/BM.UI.Forms.MainForm.resx
@@ -150,7 +150,7 @@
         1ba/Zf3fGhj4Ax1TKYXW/KmeAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="обновлениеToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="администраторToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAhwAAAIcCAYAAAC9/nd8AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAKBlJREFUeF7t3f+vbWWd2HH/hP7axqTtDzA2bUejqCP1nvsFFfl6z81V+0VsMpJB
